<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.androvista.kaustubh.mypersonaldiary.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/GenTextView"
            android:text="@string/enter_password"/>

        <EditText
            android:id="@+id/n_password"
            style="@style/GenEditText"
            android:layout_marginBottom="24dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <TextView
            style="@style/GenTextView"
            android:text="@string/cnf_password" />

        <EditText
            android:id="@+id/cnf_n_password"
            style="@style/GenEditText"
            android:layout_marginBottom="24dp"
            android:hint="@string/cnf_password"
            android:inputType="textPassword" />

        <TextView
            style="@style/GenTextView"
            android:text=""
            android:id="@+id/get_sec_ques" />

        <EditText
            android:id="@+id/cnf_sec_ans"
            style="@style/GenEditText"
            android:layout_marginBottom="24dp"
            android:hint="@string/sec_ans"
            android:inputType="textCapSentences" />

        <Button
            style="@style/GenButton"
            android:onClick="submit"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
